--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "vendor/llama-cpp-python"]
 	path = vendor/llama-cpp-python
-	url = https://github.com/abetlen/llama-cpp-python.git
+	url = git@github.com:abetlen/llama-cpp-python.git
