--- a/.github/workflows/llama-build-cuda.yaml
+++ b/.github/workflows/llama-build-cuda.yaml
@@ -15,15 +15,15 @@ jobs:
       run:
         shell: pwsh
 
-##"12.2.2", "12.3.2", "12.4.1", "12.5.0" cuda
+##"12.2.2", "12.3.2", "12.4.1", "12.5.0" "12.2.0" cuda
     steps:
       - name: Define Job Output
         id: set-matrix
         run: |
           $matrix = @{
               'os' = @('ubuntu-latest')
-              'pyver' = @("3.10", "3.11")
-              'cuda' = @("12.1.1")
+              'pyver' = @("3.10")
+              'cuda' = @("12.2.0")
               'releasetag' = @("basic")
           }
 
