--- a/.github/workflows/llama-cpp-release.yaml
+++ b/.github/workflows/llama-cpp-release.yaml
@@ -36,11 +36,11 @@ jobs:
           # disable repair
           CIBW_REPAIR_WHEEL_COMMAND: ""
         with:
-          package-dir: .
+          package-dir: ./vendor/llama-cpp-python
           output-dir: wheelhouse
 
       - name: Run Echo
-        work-dir: ./wheelhouse
+        working-directory: ./wheelhouse
         run: |
           echo  $(ls -la | grep "*.whl")
           
@@ -68,12 +68,13 @@ jobs:
           CIBW_SKIP: "*musllinux* pp*"
           CIBW_REPAIR_WHEEL_COMMAND: ""
           CIBW_ARCHS: "aarch64"
-          CIBW_BUILD: "cp38-* cp39-* cp310-* cp311-* cp312-*"
+          CIBW_BUILD: "cp310-* cp311-* cp312-*"
         with:
+          package-dir: ./vendor/llama-cpp-python
           output-dir: wheelhouse
 
       - name: Run Echo
-        work-dir: ./wheelhouse
+        working-directory: ./wheelhouse
         run: |
           echo  $(ls -la | grep "*.whl")
       # - name: Upload wheels as artifacts
@@ -104,13 +105,14 @@ jobs:
         shell: bash
 
       - name: Build source distribution
+        working-directory: ./vendor/llama-cpp-python
         run: |
           python -m build --sdist
 
       - name: Run Echo
-        work-dir: ./wheelhouse
+        working-directory: ./vendor/llama-cpp-python/dist
         run: |
-          echo  $(ls -la | grep "*.whl")
+          echo  $(ls -la | grep "*.tar.gz")
 
       # - uses: actions/upload-artifact@v4
       #   with:
