--- a/.github/workflows/llama-cpp-release.yaml
+++ b/.github/workflows/llama-cpp-release.yaml
@@ -24,6 +24,7 @@ jobs:
           python-version: "3.10"
 
       - name: Install dependencies for Linux
+        working-directory:  ./vendor/llama-cpp-python
         run: |
           python -m pip install --upgrade pip
           python -m pip install uv
@@ -97,6 +98,7 @@ jobs:
           python-version: "3.10"
 
       - name: Install dependencies for Linux
+        working-directory:  ./vendor/llama-cpp-python
         run: |
           python -m pip install --upgrade pip
           python -m pip install uv
