--- a/.github/workflows/llama-cpp-release.yaml
+++ b/.github/workflows/llama-cpp-release.yaml
@@ -66,10 +66,10 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.21.1
         env:
-          CIBW_SKIP: "*musllinux* pp*"
+          CIBW_SKIP: "pp*" #*musllinux* 
           CIBW_REPAIR_WHEEL_COMMAND: ""
           CIBW_ARCHS: "aarch64"
-          CIBW_BUILD: "cp310-* cp311-* cp312-*"
+          CIBW_BUILD: "cp310-*" # cp311-* cp312-*
         with:
           package-dir: ./vendor/llama-cpp-python
           output-dir: wheelhouse
