--- a/.github/workflows/llama-cpp-release.yaml
+++ b/.github/workflows/llama-cpp-release.yaml
@@ -37,6 +37,7 @@ jobs:
           # disable repair
           CIBW_SKIP: "*musllinux* pp*"
           CIBW_REPAIR_WHEEL_COMMAND: ""
+          CIBW_BUILD: "cp310-*" # cp311-* cp312-*
         with:
           package-dir: ./vendor/llama-cpp-python
           output-dir: wheelhouse
