--- a/.github/workflows/llama-cpp-release.yaml
+++ b/.github/workflows/llama-cpp-release.yaml
@@ -44,7 +44,7 @@ jobs:
       - name: Run Echo Whl
         working-directory: ./wheelhouse
         run: |
-          ehco $(ls -la *.whl)
+          echo $(ls -la *.whl)
 
       - name: Run Echo all
         working-directory: ./wheelhouse
@@ -83,7 +83,7 @@ jobs:
       - name: Run Echo whl
         working-directory: ./wheelhouse
         run: |
-          ehco $(ls -la *.whl)
+          echo $(ls -la *.whl)
 
       - name: Run Echo all
         working-directory: ./wheelhouse
@@ -125,7 +125,7 @@ jobs:
       - name: Run Echo
         working-directory: ./vendor/llama-cpp-python/dist
         run: |
-          ehco $(ls -la *.tar.gz)
+          echo $(ls -la *.tar.gz)
 
       # - uses: actions/upload-artifact@v4
       #   with:
