--- a/.github/workflows/llama-build-cpu.yaml
+++ b/.github/workflows/llama-build-cpu.yaml
@@ -67,6 +67,7 @@ jobs:
       - name: Configure and Patch CMake 
         run: |
           sudo apt-get update && sudo apt-get install -y ninja-build cmake
+          cd ./vendor/llama-cpp-python
           cmake -B build -DGGML_NATIVE=OFF -DGGML_CPU_ARM_ARCH=native
           cmake --build build --config Release
           
