--- a/.github/workflows/llama-build-cpu.yaml
+++ b/.github/workflows/llama-build-cpu.yaml
@@ -63,13 +63,6 @@ jobs:
         uses: docker/setup-qemu-action@v3
         with:
           platforms: linux/arm64
-
-      - name: Configure and Patch CMake 
-        run: |
-          sudo apt-get update && sudo apt-get install -y ninja-build cmake
-          cd ./vendor/llama-cpp-python
-          cmake -B build -DGGML_NATIVE=OFF -DGGML_CPU_ARM_ARCH=generic
-          cmake --build build --config Release
           
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.22.0
@@ -78,6 +71,7 @@ jobs:
           CIBW_REPAIR_WHEEL_COMMAND: ""
           CIBW_ARCHS: "aarch64"
           CIBW_BUILD: "cp312-*" # cp311-* cp312-*
+          CIBW_BEFORE_BUILD: "cmake -B build -DGGML_NATIVE=OFF -DGGML_CPU_ARM_ARCH=native . && cmake --build build --config Release"
         with:
           package-dir: ./vendor/llama-cpp-python
           output-dir: ./wheelhouse
