--- a/.github/workflows/llama-build-cpu.yaml
+++ b/.github/workflows/llama-build-cpu.yaml
@@ -51,41 +51,36 @@ jobs:
           name: wheels-${{ matrix.os }}
           path: ./wheelhouse/*.whl
 
-  build_wheels_arm64:
-    name: Build arm64 wheels
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: "recursive"
+  # build_wheels_arm64:
+  #   name: Build arm64 wheels
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #       with:
+  #         submodules: "recursive"
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-        with:
-          platforms: linux/arm64
+  #     - name: Set up QEMU
+  #       uses: docker/setup-qemu-action@v3
+  #       with:
+  #         platforms: linux/arm64
           
-      - name: Build wheels
-        uses: pypa/cibuildwheel@v2.22.0
-        env:
-          CIBW_SKIP: "*musllinux* pp*" 
-          CIBW_REPAIR_WHEEL_COMMAND: ""
-          CIBW_ARCHS: "aarch64"
-          CIBW_BUILD: "cp312-*" # cp311-* cp312-*
-          CIBW_BEFORE_BUILD: "CMAKE_ARGS='-DGGML_NATIVE=OFF -DGGML_CPU_ARM_ARCH=generic'"
-        with:
-          package-dir: ./vendor/llama-cpp-python
-          output-dir: ./wheelhouse
+  #     - name: Build wheels
+  #       uses: pypa/cibuildwheel@v2.22.0
+  #       env:
+  #         CIBW_SKIP: "*musllinux* pp*" 
+  #         CIBW_REPAIR_WHEEL_COMMAND: ""
+  #         CIBW_ARCHS: "aarch64"
+  #         CIBW_BUILD: "cp312-*" # cp311-* cp312-*
+  #         CIBW_BEFORE_BUILD: "CMAKE_ARGS='-DGGML_NATIVE=OFF -DGGML_CPU_ARM_ARCH=generic'"
+  #       with:
+  #         package-dir: ./vendor/llama-cpp-python
+  #         output-dir: ./wheelhouse
 
-      # - name: Run Echo whl
-      #   working-directory: ./wheelhouse
-      #   run: |
-      #     echo $(ls -la *.whl)
-
-      - name: Upload wheels as artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: wheels_arm64
-          path: ./wheelhouse/*.whl
+  #     - name: Upload wheels as artifacts
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: wheels_arm64
+  #         path: ./wheelhouse/*.whl
 
   build_sdist:
     name: Build source distribution
