--- a/.github/workflows/llama-build-cuda.yaml
+++ b/.github/workflows/llama-build-cuda.yaml
@@ -56,7 +56,7 @@ jobs:
       - name: Setup Mamba
         uses: conda-incubator/setup-miniconda@v3.1.0
         with:
-          activate-environment: "llamacpp"
+          activate-environment: "build"
           python-version: ${{ matrix.pyver }}
           miniforge-version: latest
           add-pip-as-python-dependency: true
