--- a/.github/workflows/llama-build-cuda.yaml
+++ b/.github/workflows/llama-build-cuda.yaml
@@ -47,6 +47,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: "recursive"
+          
+      - name: Update llama-cpp Submodule
+        run: |
+          git submodule update --init --recursive --remote
 
       - uses: actions/setup-python@v5
         with:
