--- a/.github/workflows/llama-build-cpu.yaml
+++ b/.github/workflows/llama-build-cpu.yaml
@@ -18,6 +18,9 @@ jobs:
         with:
           submodules: "recursive"
 
+      - name: Update llama-cpp Submodule
+        run: |
+          git submodule update --init --recursive --remote
       # Used to host cibuildwheel
       - uses: actions/setup-python@v5
         with:
