--- a/.github/workflows/llama-build-cpu.yaml
+++ b/.github/workflows/llama-build-cpu.yaml
@@ -21,18 +21,17 @@ jobs:
       - name: Update llama-cpp Submodule
         run: |
           git submodule update --init --recursive --remote
-      # Used to host cibuildwheel
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.10"
 
+      - name: Install the latest version of uv
+        uses: astral-sh/setup-uv@v6
+        with:
+          version: "latest"
+          activate-environment: true
+          
       - name: Install dependencies for Linux
         working-directory:  ./vendor/llama-cpp-python
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install uv
-          RUST_LOG=trace python -m uv pip install -e .[all] --verbose
-        shell: bash
+          uv pip install --system -e .[all] 
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.21.1
@@ -43,11 +42,6 @@ jobs:
         with:
           package-dir: ./vendor/llama-cpp-python
           output-dir: ./wheelhouse
-
-      # - name: Run Echo Whl
-      #   working-directory: ./wheelhouse
-      #   run: |
-      #     echo $(ls -la *.whl)
 
       - uses: actions/upload-artifact@v4
         with:
@@ -94,28 +88,23 @@ jobs:
         with:
           submodules: "recursive"
 
-      - uses: actions/setup-python@v5
+      - name: Install the latest version of uv
+        uses: astral-sh/setup-uv@v6
         with:
-          python-version: "3.10"
+          version: "latest"
+          activate-environment: true
 
       - name: Install dependencies for Linux
         working-directory:  ./vendor/llama-cpp-python
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install uv
-          RUST_LOG=trace python -m uv pip install -e .[all] --verbose
-          python -m uv pip install build
+          uv pip install --system -e .[all]
+          uv pip install --system build
         shell: bash
 
       - name: Build source distribution
         working-directory: ./vendor/llama-cpp-python
         run: |
           python -m build --sdist
-
-      # - name: Run Echo
-      #   working-directory: ./vendor/llama-cpp-python/dist
-      #   run: |
-      #     echo $(ls -la *.tar.gz)
 
       - uses: actions/upload-artifact@v4
         with:
