--- a/.github/workflows/llama-build-cpu.yaml
+++ b/.github/workflows/llama-build-cpu.yaml
@@ -31,7 +31,7 @@ jobs:
       - name: Install dependencies for Linux
         working-directory:  ./vendor/llama-cpp-python
         run: |
-          uv pip install --system -e .[all] 
+          uv sync --active --extra all
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.21.1
@@ -97,8 +97,8 @@ jobs:
       - name: Install dependencies for Linux
         working-directory:  ./vendor/llama-cpp-python
         run: |
-          uv pip install --system -e .[all]
-          uv pip install --system build
+          uv add --active build
+          uv sync --active --extra all
         shell: bash
 
       - name: Build source distribution
