--- a/.github/workflows/llama-build-cpu.yaml
+++ b/.github/workflows/llama-build-cpu.yaml
@@ -18,10 +18,6 @@ jobs:
         with:
           submodules: "recursive"
 
-      - name: Update llama-cpp Submodule
-        run: |
-          git submodule update --init --recursive --remote
-
       - name: Install the latest version of uv
         uses: astral-sh/setup-uv@v6
         with:
@@ -97,14 +93,13 @@ jobs:
       - name: Install dependencies for Linux
         working-directory:  ./vendor/llama-cpp-python
         run: |
-          uv add --active build
           uv sync --active --extra all
         shell: bash
 
       - name: Build source distribution
         working-directory: ./vendor/llama-cpp-python
         run: |
-          python -m build --sdist
+          uv build --sdist
 
       - uses: actions/upload-artifact@v4
         with:
