--- a/.github/workflows/llama-build-cuda.yaml
+++ b/.github/workflows/llama-build-cuda.yaml
@@ -47,18 +47,33 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: "recursive"
+          
+      - name: Update llama-cpp Submodule
+        run: |
+          git submodule update --init --recursive --remote
 
-        #By default we only build python versoin 3.12
-      - name: Install the latest version of uv
-        uses: astral-sh/setup-uv@v6
+      - uses: actions/setup-python@v5
         with:
-          version: "latest"
-          activate-environment: true
+          python-version: ${{ matrix.pyver }}
+          cache: 'pip'
+
+      - name: Setup Mamba
+        uses: conda-incubator/setup-miniconda@v3.1.0
+        with:
+          activate-environment: "build"
+          python-version: ${{ matrix.pyver }}
+          miniforge-version: latest
+          add-pip-as-python-dependency: true
+          auto-activate-base: false
 
       - name: Install Dependencies
+        env:
+          MAMBA_DOWNLOAD_FAILFAST: "0"
+          MAMBA_NO_LOW_SPEED_LIMIT: "1"
         run: |
           $cudaVersion = $env:CUDAVER
-          uv pip install 'cuda' -c nvidia/label/cuda-$cudaVersion
+          mamba install -y 'cuda' -c nvidia/label/cuda-$cudaVersion
+          python -m pip install build wheel
 
       - name: Build Wheel
         working-directory: vendor/llama-cpp-python
@@ -82,7 +97,7 @@ jobs:
           # if ($env:AVXVER -eq 'basic') {
           #  $env:CMAKE_ARGS = $env:CMAKE_ARGS + ' -DGGML_AVX=off -DGGML_AVX2=off -DGGML_FMA=off -DGGML_F16C=off'
           # }
-          uv build --wheel
+          python -m build --wheel
           # write the build tag to the output
           Write-Output "CUDA_VERSION=$cudaVersion" >> $env:GITHUB_ENV
 
