--- a/.github/workflows/llama-build-cpu.yaml
+++ b/.github/workflows/llama-build-cpu.yaml
@@ -32,9 +32,9 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.21.1
         env:
-          CIBW_SKIP: "*musllinux* pp*"
+          CIBW_SKIP: "*manylinux_i686* *musllinux_i686* pp*"
           CIBW_REPAIR_WHEEL_COMMAND_LINUX: "auditwheel repair --exclude libllama.so --exclude libggml.so --exclude libggml-base.so --exclude libggml-cpu.so {wheel} -w {dest_dir}"
-          CIBW_BUILD: "cp312-*"
+          CIBW_BUILD: "cp311-* cp312-*"
           CIBW_BUILD_FRONTEND: "build[uv]"
         with:
           package-dir: ./vendor/llama-cpp-python
