--- a/.github/workflows/llama-build-cpu.yaml
+++ b/.github/workflows/llama-build-cpu.yaml
@@ -34,7 +34,7 @@ jobs:
         env:
           CIBW_SKIP: "*manylinux_i686* *musllinux* pp*"
           CIBW_REPAIR_WHEEL_COMMAND_LINUX: "auditwheel repair --exclude libllama.so --exclude libggml.so --exclude libggml-base.so --exclude libggml-cpu.so {wheel} -w {dest_dir}"
-          CIBW_BUILD: "cp311-* cp312-*"
+          CIBW_BUILD: "cp312-*"
           CIBW_BUILD_FRONTEND: "build[uv]"
         with:
           package-dir: ./vendor/llama-cpp-python
