--- a/.github/workflows/llama-build-cpu.yaml
+++ b/.github/workflows/llama-build-cpu.yaml
@@ -43,7 +43,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: wheels
-          path:  ./vendor/llama-cpp-python/dist/*.whl
+          path:  ./dist/*.whl
 
 
   build_sdist:
