set python version

--- a/.github/workflows/llama-build-cpu.yaml
+++ b/.github/workflows/llama-build-cpu.yaml
@@ -43,7 +43,7 @@ jobs:
       - name: Build source distribution
         working-directory: ./vendor/llama-cpp-python
         run: |
-          uv -v build --wheel
+          uv -v build --python cpython@3.12 --wheel
 
       - uses: actions/upload-artifact@v4
         with:
