--- a/.github/workflows/llama-build-cpu.yaml
+++ b/.github/workflows/llama-build-cpu.yaml
@@ -20,6 +20,9 @@ jobs:
             "python-version": ["3.12", "3.13"]
           }')
           echo "matrix=$matrix" >> $GITHUB_OUTPUT
+      - name: echo matrix
+        run: |
+          echo ${{ toJson(steps.set-matrix.outputs.matrix) }}
   
   build_wheels:
     name: Build wheels on ${{ matrix.os }} and py-${{ matrix.python-version }}
