--- a/.github/workflows/llama-build-cpu.yaml
+++ b/.github/workflows/llama-build-cpu.yaml
@@ -20,9 +20,10 @@ jobs:
             "python-version": ["3.12", "3.13"]
           }')
           echo "matrix=$matrix" >> $GITHUB_OUTPUT
-      - name: echo matrix
-        run: |
-          echo '${{ steps.set-matrix.outputs.matrix }}'
+
+      - name: Echo matrix
+        run: echo "${{ steps.set-matrix.outputs.matrix }}"
+
   
   build_wheels:
     name: Build wheels on ${{ matrix.os }} and py-${{ matrix.python-version }}
