--- a/.github/workflows/llama-build-cpu.yaml
+++ b/.github/workflows/llama-build-cpu.yaml
@@ -20,6 +20,7 @@ jobs:
             "python-version": ["3.12", "3.13"]
           }')
           echo "matrix=$matrix" >> $GITHUB_OUTPUT
+          echo "Debug output: $matrix"
 
       - name: Echo matrix
         run: echo "${{ steps.set-matrix.outputs.matrix }}"
